# sos

./: CMakeLists.txt  LICENSE  README.md
includes/kernel/: kconstructor.h
src/: grub.cfg
src/kernel/: CMakeLists.txt  link.ld  main.c
